--- a/SmartHomeControlLibrary/__Window__/SingleLED.xaml
+++ b/SmartHomeControlLibrary/__Window__/SingleLED.xaml
@@ -22,8 +22,8 @@
                     <Polygon Stroke="Black" StrokeThickness="1" Points="190,40 190,120"/>
                 </Grid>
             </Border>
-            <Button Click="Button_Click" Tag="ON" Margin="10,0,0,5" VerticalAlignment="Bottom" HorizontalAlignment="Left" Content="Bật LED Xanh" Height="30" Width="90"/>
-            <Button Click="Button_Click" Tag="OFF" Margin="0,0,10,5" VerticalAlignment="Bottom" HorizontalAlignment="Right" Content="Bật LED Đỏ" Height="30" Width="90"/>
+            <Button Click="Button_Click" Tag="GREEN_ON" Margin="10,0,0,5" VerticalAlignment="Bottom" HorizontalAlignment="Left" Content="Bật LED Xanh" Height="30" Width="90"/>
+            <Button Click="Button_Click" Tag="RED_ON" Margin="0,0,10,5" VerticalAlignment="Bottom" HorizontalAlignment="Right" Content="Bật LED Đỏ" Height="30" Width="90"/>
             <Label x:Name="lbl_ledstatus" Foreground="Black" FontWeight="SemiBold" HorizontalAlignment="Center" Content="LED đang tắt !"/>
         </Grid>
         
