--- a/SmartHomeControlLibrary/GAS-DETECTOR/FINAL/design/SETTING_01.xaml
+++ b/SmartHomeControlLibrary/GAS-DETECTOR/FINAL/design/SETTING_01.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="SmartHomeControlLibrary.GASDETECTOR.FINALFUNCTION1.SETTING"
+﻿<UserControl x:Class="SmartHomeControlLibrary.GASDETECTOR.FINALFUNCTION.SETTING"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SmartHomeControlLibrary.GASDETECTOR.FINALFUNCTION1"
+             xmlns:local="clr-namespace:SmartHomeControlLibrary.GASDETECTOR.FINALFUNCTION"
              mc:Ignorable="d" 
              d:DesignHeight="595" d:DesignWidth="985" Background="White">
+
 
     <Border BorderBrush="#999999" BorderThickness="1,1,1,1">
         <Grid>
@@ -186,19 +187,17 @@
                             </WrapPanel>
                         </Border>
                     </Grid>
-                    <Grid IsEnabled="False">
-                        <Label FontWeight="SemiBold" Content="Gas (ppm)"/>
-                        <Border>
-                            <WrapPanel Margin="5,0,0,0">
-                                <Label BorderThickness="0" Width="100" Content="Tiêu chuẩn: "/>
-                                <TextBox Width="100" BorderThickness="0,0,0,2" Margin="0" HorizontalAlignment="Left"
-                                         Text="{Binding Path=PPMValue, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
-                                <Label Margin="80,0,0,0" BorderThickness="0" Width="70" Content="Sai số: "/>
-                                <TextBox Width="70" BorderThickness="0,0,0,2" Margin="0" HorizontalAlignment="Left"
-                                         Text="{Binding Path=PPMAccuracy, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
-                            </WrapPanel>
-                        </Border>
+                    <Grid>
+                        <Label Content="Firmware version"/>
+                        <TextBox Tag="firmwareversion" GotFocus="FrameWorkElement_Focus"
+                             Text="{Binding Path=FirmwareVersion, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
                     </Grid>
+                    <Grid>
+                        <Label Content="Model"/>
+                        <TextBox Tag="model" GotFocus="FrameWorkElement_Focus"
+                             Text="{Binding Path=Model, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+                    </Grid>
+
 
 
                     <!--CÀI ĐẶT BÀI TEST-->
@@ -209,10 +208,18 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
-                        <Label Height="135" Grid.Column="0" Content="Lựa chọn bài test"/>
+                        <Label Height="190" Grid.Column="0" Content="Lựa chọn bài test"/>
 
                         <Border Grid.Column="1" Margin="0">
                             <StackPanel>
+                                <CheckBox Margin="10,5,0,0" Content="Xác nhận mã ID"
+                                      IsChecked="{Binding Path=IsVerifyID, UpdateSourceTrigger=PropertyChanged}"/>
+                                <CheckBox Margin="10,5,0,0" Content="Xác nhận firmware version"
+                                      IsChecked="{Binding Path=IsVerifyFW, UpdateSourceTrigger=PropertyChanged}"/>
+                                <CheckBox Margin="10,5,0,0" Content="Xác nhận model"
+                                      IsChecked="{Binding Path=IsVerifyModel, UpdateSourceTrigger=PropertyChanged}"/>
+                                <CheckBox Margin="10,5,0,0" Content="Ghi mã serial sản phẩm"
+                                      IsChecked="{Binding Path=IsWriteSN, UpdateSourceTrigger=PropertyChanged}"/>
                                 <CheckBox Margin="10,5,0,0" Content="Test cảm biến đo nhiệt độ"
                                       IsChecked="{Binding Path=IsCheckTemperature, UpdateSourceTrigger=PropertyChanged}"/>
                                 <CheckBox Margin="10,5,0,0" Content="Test cảm biến đo độ ẩm"
@@ -221,10 +228,6 @@
                                       IsChecked="{Binding Path=IsCheckLED, UpdateSourceTrigger=PropertyChanged}"/>
                                 <CheckBox Margin="10,5,0,0" Content="Test còi báo động"
                                       IsChecked="{Binding Path=IsCheckSpeaker, UpdateSourceTrigger=PropertyChanged}"/>
-                                <CheckBox IsEnabled="False" Margin="10,5,0,0" Content="Test cảm biến gas"
-                                      IsChecked="{Binding Path=IsCheckPPM, UpdateSourceTrigger=PropertyChanged}"/>
-                                <CheckBox IsEnabled="False" Margin="10,5,0,0" Content="Chuyển firmware sang mode thương mại"
-                                      IsChecked="{Binding Path=IsSwitchFirmwareMode, UpdateSourceTrigger=PropertyChanged}"/>
                             </StackPanel>
                         </Border>
 
@@ -267,5 +270,6 @@
 
         </Grid>
     </Border>
-    
+
+
 </UserControl>
