2019/07/30 08:39 AM Signed-off-by: hoducanh1988 <hoducanh1988@gmail.com>

--- a/SmartHomeControlLibrary/SMOKE-DETECTOR/PCBA/design/SETTING.xaml
+++ b/SmartHomeControlLibrary/SMOKE-DETECTOR/PCBA/design/SETTING.xaml
@@ -187,7 +187,7 @@
                         </Border>
                     </Grid>
                     <Grid>
-                        <Label FontWeight="SemiBold" Content="Smoke (ppm)"/>
+                        <Label FontWeight="SemiBold" Content="Smoke (mV)"/>
                         <Border>
                             <WrapPanel Margin="5,0,0,0">
                                 <Label BorderThickness="0" Width="100" Content="Tiêu chuẩn: "/>
