--- a/SmartHomeControlLibrary/CO-DETECTOR/FINAL/design/RUNALL.xaml
+++ b/SmartHomeControlLibrary/CO-DETECTOR/FINAL/design/RUNALL.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="SmartHomeControlLibrary.CarbonMonoxideDetector.FINALFUNCTION.RUNALL"
+﻿<UserControl x:Class="SmartHomeControlLibrary.CarbonMonoxideDetector.FINALFUNCTION1.RUNALL"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SmartHomeControlLibrary.CarbonMonoxideDetector.FINALFUNCTION"
+             xmlns:local="clr-namespace:SmartHomeControlLibrary.CarbonMonoxideDetector.FINALFUNCTION1"
              mc:Ignorable="d" 
              d:DesignHeight="595" d:DesignWidth="985" Background="White">
 
