--- a/SmartHomeControlLibrary/CO-DETECTOR/FINAL/design/RUNALL_01.xaml
+++ b/SmartHomeControlLibrary/CO-DETECTOR/FINAL/design/RUNALL_01.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="SmartHomeControlLibrary.GASDETECTOR.FINALFUNCTION.RUNALL"
+﻿<UserControl x:Class="SmartHomeControlLibrary.CarbonMonoxideDetector.FINALFUNCTION.RUNALL"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SmartHomeControlLibrary.GASDETECTOR.FINALFUNCTION"
+             xmlns:local="clr-namespace:SmartHomeControlLibrary.CarbonMonoxideDetector.FINALFUNCTION"
              mc:Ignorable="d" 
              d:DesignHeight="595" d:DesignWidth="985" Background="White">
 
-    
+
     <Grid Margin="0,2,0,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -525,6 +525,6 @@
         </Border>
 
     </Grid>
- 
-    
+
+
 </UserControl>
